--- a/package.json
+++ b/package.json
@@ -15,8 +15,18 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.6.2",
+    "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
+    "dataloader": "^1.4.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "graphql": "^14.3.1"
+    "graphql": "^14.3.1",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-resolvers": "^0.3.3",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
+    "pg": "^7.11.0",
+    "sequelize": "^5.8.7"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
