--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:run-server": "TEST_DATABASE=bunker-test npm start",
+    "test:execute-test": "mocha --require @babel/register 'src/**/*.spec.js'",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +26,6 @@
     "graphql-iso-date": "^3.6.1",
     "graphql-resolvers": "^0.3.3",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "sequelize": "^5.8.7"
   },
@@ -33,6 +34,10 @@
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
+    "axios": "^0.19.0",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.1"
   }
 }
